public-testnet/monitoring/grafana-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: monitoring
  name: grafana-svc
spec:
  ports:
    - port: 80
      name: grafana-pub
      targetPort: 3000
      protocol: TCP
  type: NodePort    
  selector:
    app.kubernetes.io/instance: prometheus
    app.kubernetes.io/name: grafana
